tests/baselines/reference/classExtendsMultipleBaseClasses.errors.txt
==== tests/cases/compiler/classExtendsMultipleBaseClasses.ts (2 errors) ====
    class A { }
    class B { }
    class C extends A,B { }
                     ~
!!! error TS1005: '{' expected.
                        ~
!!! error TS1005: ';' expected.